Adapt user audit page to Java 8